# ticas

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: cas.h  compute.c  eval.c  fields.c  main.c  ui.c
